--- a/client/views/user/user_login.html
+++ b/client/views/user/user_login.html
@@ -1,10 +1,3 @@
-<template name="_field">
-  <div class="input">
-      <label>{{label}}</label>
-      <input name="{{name}}" type="{{type}}" />
-    </div>
-</template>
-
 <template name="userLogin">
   <h2>Log in</h2>
 
@@ -15,6 +8,8 @@
 
     <div class="actions">
       <input type="submit" />
+
+      <a href="{{userSignupPath}}">Registracia</a>
     </div>
 
   </form>
