--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -1,6 +1,7 @@
 <template name="layoutHeader">
   <div id="status">
     {{#if currentUser}}
+      <div class="picture"><img src="/photos/{{userAvatar.nameSmall}}"></div>
       Si prihlaseny ako {{currentUser.username}}.
       <a href="#" class="logout">Odhlasit sa</a>
     {{else}}
