Adding image assets

--- a/client/stylesheets/application.styl
+++ b/client/stylesheets/application.styl
@@ -53,7 +53,7 @@ body
       color #fff
 
     a#logo
-      image 'logo_small.png' 40px 40px
+      image '/logo_small.png' 40px 40px
       background-repeat no-repeat
       background-position center center
       width 40px
