--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -1,3 +1,5 @@
+@import 'nib'
+
 #messages
   width 100%
   bottom 0
@@ -21,8 +23,15 @@
       &:focus
         outline 0
 
-  .message.wink
-    color #a800ff
 
-  .message.private
-    color #3a6ad8
+div.message
+  clearfix()
+  margin-bottom: 10px
+  div.picture
+    float left
+    margin-top -7px
+    margin-right 15px
+    img
+      width 30px
+      border-radius 50%
+      border 2px solid #40CA59
