Refactorign avatar helper

--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -3,7 +3,7 @@
     {{#if currentUser}}
       <div class="picture">
         <a href="{{userProfilePath currentUser}}">
-          <img src="{{userAvatar}}">
+          <img src="{{userAvatar currentUser}}">
         </a>
       </div>
       Si prihlaseny ako {{currentUser.username}}.
