--- a/client/views/user/user_profile.html
+++ b/client/views/user/user_profile.html
@@ -1,3 +1,8 @@
 <template name="userProfile">
-  
+  <div class="profile">
+    <div class="picture">
+      <img src="{{userAvatar user}}">
+    </div>
+    <h1>{{user.username}}</h1>
+  </div>
 </template>
