--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -4,13 +4,14 @@
   width 100%
   bottom 0
   border-top 1px solid #fff
-  margin-top 20px
+  // margin-top 20px
 
   .list
-    padding-left 20px
+    // padding-left 20px
+    padding-top 20px
 
   .input
-    padding 10px 15px
+    // padding 10px 15px
     box-sizing border-box
     input
       background #fff
