--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -10,9 +10,9 @@
         Si prihlaseny ako {{currentUser.username}}.
         <a href="#" class="logout">Odhlasit sa</a>
       {{else}}
-        <a href="{{userLoginPath}}">Prihlasit sa</a>
+        <a href="{{userLoginPath}}">Prihlásit sa</a>
         |
-        <a href="{{userSignupPath}}">Registracia</a>
+        <a href="{{userSignupPath}}">Registrácia</a>
       {{/if}}
     </div>
   </div>
