--- a/client/stylesheets/layout.styl
+++ b/client/stylesheets/layout.styl
@@ -5,7 +5,6 @@
 // -------------------------------------------------
 
 body
-  background green1
   margin 0
   padding 0
 
@@ -19,7 +18,8 @@ body
 // -------------------------------------------------
 
 body
-  background #fff
+  background #1b1b1c
+  color #e6ebf4
 
   div#navigation
     position fixed
@@ -74,25 +74,19 @@ body
   #header
     height 50px
     margin-bottom 10px
-    opacity 0.5
+    opacity 0.7
     // padding-top 10px
-
-    a
-      color #000
 
 
     #status
-      color #000
       padding-top 17px
       padding-right 20px
 
     div.picture
       float left
-      margin-top -7px
+      margin-top -3px
       margin-right 15px
       img
-        width 30px
-        border-radius 50%
-        border 2px solid #40CA59
+        width 20px
 
   
