--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -3,7 +3,6 @@
 #messages
   width 100%
   bottom 0
-  border-top 1px solid #fff
   // margin-top 20px
 
   .list
@@ -14,11 +13,11 @@
     // padding 10px 15px
     box-sizing border-box
     input
-      background #fff
       width 100%
       padding 10px 15px
+      background transparent
       border 1px solid #c2c2c2
-      color black
+      color #fff
       box-sizing border-box
       display block
 
@@ -28,12 +27,10 @@
 
 div.message
   clearfix()
-  margin-bottom: 10px
+  margin-bottom: 5px
   div.picture
     float left
-    margin-top -7px
-    margin-right 15px
+    // margin-top -7px
+    margin-right 10px
     img
-      width 30px
-      border-radius 50%
-      border 2px solid #40CA59
+      width 15px
