Adding link to uploading photo

--- a/client/views/layout/header.html
+++ b/client/views/layout/header.html
@@ -8,7 +8,8 @@
           </a>
         </div>
         Si prihlaseny ako {{currentUser.username}}.
-        <a href="#" class="logout">Odhlasit sa</a>
+        <a href="#" class="logout">[Odhlasit sa]</a>
+        <a href="{{photoAddPath}}">[Zmenit profilovku]</a>
       {{else}}
         <a href="{{userLoginPath}}">Prihlásit sa</a>
         |
