Hyperlinks in messages

--- a/client/views/messages/list.html
+++ b/client/views/messages/list.html
@@ -14,7 +14,7 @@
             {{> _messageUser this}}
           {{/with}}
           
-          {{content}}
+          {{{formatContent content}}}
         </div>
       {{/each}}
     </div>
