Using consolas on Windows

--- a/client/stylesheets/typo.styl
+++ b/client/stylesheets/typo.styl
@@ -1,5 +1,5 @@
 body, input
-  font-family Menlo, Courier New, Courier, sans-serif
+  font-family Menlo, Consolas, Courier New, Courier, sans-serif
   font-size 12px
 
 h2
