Preparing layout for presence

--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -1,7 +1,19 @@
 @import 'nib'
 
-#messages
+// Layout
+
+table#messages-layout
   width 100%
+  td
+    vertical-align top
+  td#messages
+    padding-right 10px    
+  td#presence
+    padding-left 10px
+    border-left 1px solid #fff
+
+#messages
+  // width 100%
   bottom 0
   // margin-top 20px
 
