Width of presence bar

--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -11,6 +11,7 @@ table#messages-layout
   td#presence
     padding-left 10px
     border-left 1px solid #fff
+    width 15%
 
 #messages
   // width 100%
