Styling user list

--- a/client/stylesheets/users.styl
+++ b/client/stylesheets/users.styl
@@ -4,3 +4,7 @@
     float left
     margin-right 15px
     margin-bottom 15px
+    text-align center
+    a
+      text-decoration none
+      color #fff
