--- a/client/views/user/user_list.html
+++ b/client/views/user/user_list.html
@@ -5,6 +5,8 @@
         <div class="picture">
           <a href="{{userProfilePath this}}">
             <img src="{{userAvatar this}}">
+            <br />
+            <strong>{{username}}</strong>
           </a>
         </div>
       </div>
