--- a/client/views/messages/list.html
+++ b/client/views/messages/list.html
@@ -17,6 +17,8 @@
               {{/with}}
               
               {{{formatContent content}}}
+
+              <small class="timestamp">{{timestampFormat timestamp}}</small>
             </div>
           {{/each}}
         </div>
