Showing online users

--- a/client/views/messages/list.html
+++ b/client/views/messages/list.html
@@ -27,11 +27,8 @@
       <td id="presence">
         Who's here:
 
-        <ul>
-          <li>
-            <a href="#">vojto</a>
-          </li>
-        </ul>
+        {{> onlineUsers}}
+        
       </td>
     </tr>
   </table>
