--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -11,7 +11,7 @@ table#messages-layout
   td#presence
     padding-left 10px
     border-left 1px solid #fff
-    width 15%
+    width 180px
 
 #messages
   // width 100%
