--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -1,4 +1,5 @@
 @import 'nib'
+@import 'colors'
 
 // Layout
 
@@ -47,6 +48,9 @@ div.message
     margin-right 10px
     img
       width 15px
+
+  &.mention
+    color #ff4b4b
 
 small.timestamp
   color #777
