Making the layout responsive. Sent from a bus.

--- a/client/stylesheets/messages.styl
+++ b/client/stylesheets/messages.styl
@@ -14,6 +14,11 @@ table#messages-layout
     border-left 1px solid #fff
     width 180px
 
+@media screen and (max-width: 480px)
+  table#messages-layout
+    td#presence
+      display none
+
 #messages
   // width 100%
   bottom 0
