--- a/client/views/user/user_login.html
+++ b/client/views/user/user_login.html
@@ -2,7 +2,7 @@
   <h2>Prihlásiť sa</h2>
 
   <form class="simple_form">
-    {{formField name="username" label="Meno" type="text"}}
+    {{formField name="username" label="Meno" type="email"}}
 
     {{formField name="password" label="Heslo" type="password"}}
 
