--- a/client/stylesheets/forms.styl
+++ b/client/stylesheets/forms.styl
@@ -22,7 +22,7 @@ form.simple_form
     abbr
       display none
 
-  input[type=text], input[type=password]
+  input[type=text], input[type=password], input[type=email]
     border 1px solid #aaa
     padding 5px
     width 175px
