--- a/client/stylesheets/layout.styl
+++ b/client/stylesheets/layout.styl
@@ -72,7 +72,7 @@ body
     padding-left 120px
 
   #header
-    height 50px
+    // height 50px
     margin-bottom 10px
     opacity 0.7
     // padding-top 10px
@@ -90,3 +90,8 @@ body
         width 20px
 
   
+@media screen and (max-width: 480px)
+  #navigation
+    display none
+  #content
+    padding-left 20px !important
