--- a/client/views/messages/list.html
+++ b/client/views/messages/list.html
@@ -4,7 +4,7 @@
       <td id="messages">
         <div class="input">
           <form>
-            <input type="text" />
+            <input type="email" />
           </form>
         </div>
 
@@ -25,8 +25,6 @@
       </td>
 
       <td id="presence">
-        Who's here:
-
         {{> onlineUsers}}
         
       </td>
