--- a/client/views/messages/list.html
+++ b/client/views/messages/list.html
@@ -4,7 +4,7 @@
       <td id="messages">
         <div class="input">
           <form>
-            <input type="email" />
+            <input type="text" autocapitalize="off" autocorrect="off" />
           </form>
         </div>
 
